2018-08-20  MORIOKA Tomohiko  <tomo.git@chise.org>

	* Ideograph-R061-Heart.el (U+5FF7): Add some relations for other
	characters.
	(U+605F): Likewise; add `sound@ja/on/{kan|go}'.
	(U+6148): Add `ideographic-structure'.
	(UU+6148): Use UU+5179 instead U+5179 in `ideographic-structure';
	delete `=>ucs@iwds-1'.

2018-08-16  MORIOKA Tomohiko  <tomo.git@chise.org>

	* Ideograph-R134-Mortar.el (JU+81FE): Add some relations for other
	characters.
	(A-U+81FE-itaiji-001): New abstract node; use `<-denotational' for
	A-cgnU+81FE; unify A-U+81FE-itaiji-002.
	(U+81FE-itaiji-001): New character; use `<-denotational' for
	A-U+81FE-itaiji-001.
	(U+81FE-itaiji-002): Likewise.

	* Ideograph-R078-Death.el (U-000239D1): Add `<-formed' for U+51F6.
	(U-00023A3B): Apply new conventions for glyph granularity.

2018-08-13  MORIOKA Tomohiko  <tomo.git@chise.org>

	* Ideograph-R115-Grain.el (A-cgnU+7A50): Changed from U+7A50.
	(AJ1-01136): Unify U+7A50 instead of A-IWDSU+7A50 and UU+7A50; use
	A-cgnU+7A50 instead of U+7A50 as its mother.

	* Ideograph-R131-Minister.el (U+81E7): Apply new conventions for
	glyph granularity.

	* Ideograph-R086-Fire.el (U+7192): Use `->subsumptive'.

	* Ideograph-R062-Halberd.el (U+6215): Apply new conventions for
	glyph granularity.
	(BC-8879): New character; use `<-denotational' for U+6215.

	* Ideograph-R009-Man.el (A-GT-K05990): New abstract node.
	(GT-K05990): New character; use `<-denotational' for A-GT-K05990.

2018-08-09  MORIOKA Tomohiko  <tomo.git@chise.org>

	* Ideograph-R030-Mouth.el (U+54C5): Add some relations for other
	charactersw; add representative nodes.
	(U+557C): Add `sound@ja/on/{kan|go}'; add some relations for other
	characters.
	(U-00020FC7): Add `sound@ja/on'.
	(IU+20FC7): Add `<-formed' and `<-same' for JU+8B11.
	(U+5667): Use `->denotational' and `->subsumptive'.
	(U-00021096): Apply new conventions for glyph granularity.
	(U-000210E4): Add `sound@ja/on'.
	(IU+210E4): Add `<-formed' and `<-same' for IU+21096.
