@@ -1,3 +1,10 @@
+2018-08-23  MORIOKA Tomohiko  <tomo.git@chise.org>
+
+	* Ideograph-R030-Mouth.el (U+55DE): Add `ideographic-structure';
+	add `sound@ja/on'.
+	(o-JU+55DE): Unify o-AJ1-21291.
+	(M-04099): Add some relations for other characters.
+
 2018-08-20  MORIOKA Tomohiko  <tomo.git@chise.org>
 
 	* Ideograph-R061-Heart.el (U+5FF7): Add some relations for other
